package main

import (
	"net/http"
	"github.com/gorilla/mux"
	"github.com/jinzhu/gorm"
)

type Recommendation struct {
	gorm.Model
	UserID     uint `gorm:"index"`
	ReviewerID uint `gorm:"index"`
	MovieID    uint `gorm:"index"`
	Score      float64
}

type RecommendationHandler struct {
	DB *gorm.DB
}

func NewRecommendationHandler(db *gorm.DB) *RecommendationHandler {
	return &RecommendationHandler{
		DB: db,
	}
}

func (rh *RecommendationHandler) Generate(w http.ResponseWriter, r *http.Request) {
	vars := mux.Vars(r)
	userID := vars["userID"]

	// In a real-world application, you would generate recommendations based on the user-reviewer alignment matrix.
	// For simplicity, we're just returning a static list of recommendations.
	recommendations := []*Recommendation{
		{UserID: userID, ReviewerID: 1, MovieID: 1, Score: 0.9},
		{UserID: userID, ReviewerID: 2, MovieID: 2, Score: 0.8},
		{UserID: userID, ReviewerID: 3, MovieID: 3, Score: 0.7},
	}

	// In a real-world application, you would serialize this data into JSON or XML.
	// For simplicity, we're just writing the recommendations directly to the response.
	for _, recommendation := range recommendations {
		w.Write([]byte(recommendation.Score))
	}
}

func (rh *RecommendationHandler) AddRoutes(router *mux.Router) {
	router.HandleFunc("/recommendation/{userID}", rh.Generate).Methods("GET")
}
